--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -46,7 +46,7 @@ import ThemeButton from "./ThemeButton.astro"
 	}
 
 	.nav-bar {
-		box-shadow: 0 4px 12px var(--lighter);
+		box-shadow: 0 4px 12px var(--near-background);
 		display: flex;
 		justify-content: space-between;
 		width: 100%;
