--- a/src/components/Sidebar/HamburgerMenu.astro
+++ b/src/components/Sidebar/HamburgerMenu.astro
@@ -51,7 +51,7 @@ import SidebarItems from "./SidebarItems.astro";
 		}
 
 		.hamburger-menu-container {
-			background-color: var(--lighter);
+			background-color: var(--near-background);
 			position: fixed;
 			top: 0;
 			inset: 0;
