--- a/src/components/Sidebar/LeftSidebar.astro
+++ b/src/components/Sidebar/LeftSidebar.astro
@@ -8,7 +8,7 @@ import SidebarItems from "./SidebarItems.astro";
 
 <style>
 	.sidebar {
-		border-right: 2px solid var(--lighter);
+		border-right: 2px solid var(--near-background);
 		display: none;
 		flex-direction: column;
 		margin-top: 15px;
