--- a/src/components/Sidebar/LeftSidebar.astro
+++ b/src/components/Sidebar/LeftSidebar.astro
@@ -11,9 +11,9 @@ import SidebarItems from "./SidebarItems.astro";
 		border-right: 2px solid var(--near-background);
 		display: none;
 		flex-direction: column;
-		margin-top: 15px;
+		margin-top: 2rem;
 		min-height: 100dvh;
-		padding: 20px;
+		padding: 1.25rem;
 		width: 15%;
 	}
 
