--- a/src/components/Sidebar/HamburgerMenu.astro
+++ b/src/components/Sidebar/HamburgerMenu.astro
@@ -33,11 +33,6 @@ import SidebarItems from "./SidebarItems.astro";
 	}
 
 	@media (width < 48em) {
-		.hamburger-menu-open-button {
-			background-color: transparent;
-			border: none;
-		}
-
 		.hamburger-menu-open-button svg {
 			fill: black;
 		}
@@ -64,13 +59,11 @@ import SidebarItems from "./SidebarItems.astro";
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
-			margin: 30px 15px;
+			margin: 1.875rem 1rem;
 		}
 
 		.hamburger-menu-close-button {
 			align-self: flex-end;
-			background-color: transparent;
-			border: none;
 		}
 
 		.hamburger-menu-close-button svg {
@@ -86,7 +79,7 @@ import SidebarItems from "./SidebarItems.astro";
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
-			margin-top: 30px;
+			margin-top: 1.875rem;
 		}
 	}
 
@@ -106,7 +99,6 @@ import SidebarItems from "./SidebarItems.astro";
 </style>
 
 <script>
-	const mainContent = document.querySelector('.main-content')
 	const hamburgerMenuContainer = document.querySelector<HTMLElement>('.hamburger-menu-container')
 	const openButton = document.querySelector<HTMLElement>('.hamburger-menu-open-button')
 	const closeButton = document.querySelector<HTMLElement>('.hamburger-menu-close-button')
@@ -116,13 +108,11 @@ import SidebarItems from "./SidebarItems.astro";
 		closeButton.focus()
 		hamburgerMenuContainer.removeAttribute('inert')
 		hamburgerMenuContainer.removeAttribute('style')
-		// mainContent.setAttribute('inert', '')
 		openButton.setAttribute('aria-expanded', 'true')
 	}
 
 	function closeMenu() {
 		hamburgerMenuContainer.setAttribute('inert', '')
-		// mainContent.removeAttribute('inert')
 		openButton.focus()
 		openButton.setAttribute('aria-expanded', 'false')
 
@@ -146,6 +136,7 @@ import SidebarItems from "./SidebarItems.astro";
 
 	openButton.addEventListener('click', openMenu)
 	closeButton.addEventListener('click', closeMenu)
+
 	media.addEventListener('change', function (media) {
 		setupMenu(media)
 	})
