--- a/src/components/Sidebar/SidebarItems.astro
+++ b/src/components/Sidebar/SidebarItems.astro
@@ -23,7 +23,7 @@ items.sort((a, b) => {
 		color: var(--text-color);
 		font-size: 1.2rem;
 		font-weight: 500;
-		padding: 10px;
+		padding: 0.625rem;
 		text-decoration: none;
 		white-space: nowrap;
 		width: 95%;
