--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,9 @@
 ---
 interface Props {
-	title?: string;
+	title?: string
 }
 
-const { title = "Brooklyn Docs" } = Astro.props;
+const { title = "Brooklyn Docs" } = Astro.props
 ---
 
 <!doctype html>
@@ -12,7 +12,7 @@ const { title = "Brooklyn Docs" } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<link rel="icon"  href="/favicon.svg" />
 		<link rel="stylesheet" href="/src/styles/globals.css" />
 		<title>{title}</title>
@@ -44,13 +44,17 @@ const { title = "Brooklyn Docs" } = Astro.props;
 </html>
 
 <style is:inline>
+	button {
+		background-color: transparent;
+		border: none;
+	}
+
 	button:hover {
 		cursor: pointer;
 	}
 
 	.code-block-container {
 		position: relative;
-		z-index: -1;
 	}
 
 	.code-block-container:hover .copy-code {
@@ -58,16 +62,12 @@ const { title = "Brooklyn Docs" } = Astro.props;
 	}
 
 	.copy-code {
-		background-color: transparent;
-		border: 0;
-		height: 30px;
-		margin: 10px;
+		margin: 0.625rem;
 		opacity: 0;
 		position: absolute;
 		top: 0;
 		right: 0;
-		transition: opacity 0.25s;
-		width: 30px;
+		transition: all 0.25s;
 	}
 </style>
 
@@ -75,7 +75,7 @@ const { title = "Brooklyn Docs" } = Astro.props;
 	// credits ⇝ https://timneubauer.dev/blog/copy-code-button-in-astro/
 	let codeBlocks = Array.from(document.querySelectorAll('pre'))
 
-	const copyIcon = '<svg viewBox="0 0 448 512"> <path fill="white" d="M384 336l-192 0c-8.8 0-16-7.2-16-16l0-256c0-8.8 7.2-16 16-16l140.1 0L400 115.9 400 320c0 8.8-7.2 16-16 16zM192 384l192 0c35.3 0 64-28.7 64-64l0-204.1c0-12.7-5.1-24.9-14.1-33.9L366.1 14.1c-9-9-21.2-14.1-33.9-14.1L192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-32-48 0 0 32c0 8.8-7.2 16-16 16L64 464c-8.8 0-16-7.2-16-16l0-256c0-8.8 7.2-16 16-16l32 0 0-48-32 0z" /></svg>'
+	const copyIcon = '<svg width="20px" height="20px" viewBox="0 0 448 512"> <path fill="white" d="M384 336l-192 0c-8.8 0-16-7.2-16-16l0-256c0-8.8 7.2-16 16-16l140.1 0L400 115.9 400 320c0 8.8-7.2 16-16 16zM192 384l192 0c35.3 0 64-28.7 64-64l0-204.1c0-12.7-5.1-24.9-14.1-33.9L366.1 14.1c-9-9-21.2-14.1-33.9-14.1L192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-32-48 0 0 32c0 8.8-7.2 16-16 16L64 464c-8.8 0-16-7.2-16-16l0-256c0-8.8 7.2-16 16-16l32 0 0-48-32 0z" /></svg>'
 
 	for (let codeBlock of codeBlocks) {
 		let container = document.createElement('div')
@@ -100,7 +100,7 @@ const { title = "Brooklyn Docs" } = Astro.props;
 		const code = block.querySelector("code")
 		await navigator.clipboard.writeText(code.innerText)
 
-		button.innerHTML = '<svg viewBox="0 0 448 512"> <path fill="white" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" /></svg>'
+		button.innerHTML = '<svg width="20px" height="20px" viewBox="0 0 448 512"> <path fill="white" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" /></svg>'
 
 		setTimeout(() => {
 			button.innerHTML = copyIcon
