--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -5,26 +5,26 @@ import LeftSidebar from "../components/Sidebar/LeftSidebar.astro"
 ---
 
 <BaseLayout>
-	<Header />
 	<div class="docs-container">
 		<LeftSidebar />
 		<article class="article">
 			<slot />
 		</article>
 	</div>
+	<Header />
 </BaseLayout>
 
 <style is:inline>
 	.docs-container {
 		display: flex;
 		flex-direction: row;
-		margin-top: 40px;
+		margin-top: 2.5rem;
 		padding: 0.5rem 2rem;
 		width: 100%;
 	}
 
 	.article {
-		padding: 0rem 2rem;
+		padding: 1rem 2rem;
 		max-width: 85%;
 	}
 
