updated copyright label

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,5 +112,5 @@ const brooklynCode = `VStack {
 <script>
 	const currentYear = new Date().getFullYear()
 	const copyrightLabel = document.querySelector('.copyright-label')
-	copyrightLabel.textContent = `© ${currentYear} Luki120`
+	copyrightLabel.textContent = `© 2024-${currentYear} Luki120`
 </script>
